[tool.poetry]
name = "cannabis_strain_analysis"
version = "0.1.0"
description = "Analysis and visualization of cannabis strains by rating, subjective effect, and flavor"
authors = ["Ian Scott Knight and Lara Arikan <isk@alumni.stanford.edu and arikan@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
python-dotenv = "^0.14.0"
pandas = "^1.1.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
